--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ contrib/terraform/aws/credentials.tfvars
 **/*.sw[pon]
 *~
 vagrant/
-
+.vscode
 # Ansible inventory
 !inventory/local
 !inventory/sample
